--- a/docs/web/浏览器书签.md
+++ b/docs/web/浏览器书签.md
@@ -395,6 +395,12 @@ IK分词器
 
 > [Halo](https://halo.run/)
 
+#### docsify
+
+​	一个简单易用的网页文档生成器
+
+> [docsify](https://docsify.js.org/#/)
+
 ---
 
 ## 资源分享
