--- a/docs/windows/批量修改多级文件夹内的文件后缀名.md
+++ b/docs/windows/批量修改多级文件夹内的文件后缀名.md
@@ -1,4 +1,4 @@
-## 批量修改多级文件夹内的文件后缀名
+**批量修改多级文件夹内的文件后缀名**
 
 利用DOS命令即可完成，win+R打开运行，直接在命令行输入
 D：回车，到你需要更改后缀名的路径。
@@ -48,3 +48,6 @@ if "%confirm%"=="" (
 pause
 ```
 
+**文件下载**
+
+[批量修改多级文件夹内的文件后缀名](https://alist.boliguide.cn/d/%E6%9C%AC%E6%9C%BA%E5%AD%98%E5%82%A8/%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F/%E6%89%B9%E9%87%8F%E4%BF%AE%E6%94%B9%E5%A4%9A%E7%BA%A7%E6%96%87%E4%BB%B6%E5%A4%B9%E5%86%85%E7%9A%84%E6%96%87%E4%BB%B6%E5%90%8E%E7%BC%80%E5%90%8D.bat?sign=SiictoVnpxUuNj4JPO4AuIu-l9NP4DgX9sGrPZ7PyVA=:0)
