修改文件下载位置

--- a/docs/Markdown/Windows/批量修改多级文件夹内的文件后缀名.md
+++ b/docs/Markdown/Windows/批量修改多级文件夹内的文件后缀名.md
@@ -50,4 +50,4 @@ pause
 
 **文件下载**
 
-[批量修改多级文件夹内的文件后缀名](https://alist.boliguide.cn/d/%E6%9C%AC%E6%9C%BA%E5%AD%98%E5%82%A8/%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F/%E6%89%B9%E9%87%8F%E4%BF%AE%E6%94%B9%E5%A4%9A%E7%BA%A7%E6%96%87%E4%BB%B6%E5%A4%B9%E5%86%85%E7%9A%84%E6%96%87%E4%BB%B6%E5%90%8E%E7%BC%80%E5%90%8D.bat?sign=SiictoVnpxUuNj4JPO4AuIu-l9NP4DgX9sGrPZ7PyVA=:0)
+[批量修改多级文件夹内的文件后缀名](https://www.alipan.com/s/F85KBqehZr1)
